Upgrade to Maven 4.0.0-rc-2